# Recommandation_musique

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SUMMARY.md  dashboard.py  docker-compose.yml  pyproject.toml  quick_start.sh  requirements.txt  setup.sh  start_airflow.sh  test_model.py
config/: load_env.py
dags/: listenbrainz_pipeline.py
docs/: GUIDE_AWS.md  GUIDE_EC2.md  ORGANIZATION.md  algorithmes_recommandation.md  plan_implementation.md
scripts/: aggregate_data.py  build_matrix.py  deduplicate_tracks.py  download_all_incrementals.sh  download_incrementals.py  download_listenbrainz.py  download_listenbrainz_2025.py  download_listenbrainz_sample.py  download_missing_files.py  download_model.py  download_musicbrainz.py  download_to_s3_via_ec2.py  extract_incrementals.py  filter_listenbrainz_2025.py  filter_listenbrainz_2025_v2.py  launch_download_ec2.py  monitor_ec2_download.py  parse_listens.py  run_full_pipeline_ec2.py  run_pipeline_ec2.py  setup_aws_s3.py  setup_scheduled_download.py  test_listenbrainz_download.py  test_pipeline_ec2.py  upload_to_s3.py
src/: evaluate.py  serve.py  train.py
src/api/: __init__.py  catalog.py  cover_service.py  library.py  main.py  recommender.py
src/app/: api.py
src/app/agent/: agent.py  prompt.py  tools.py
src/app/load_festival/: festival_to_vectorstore.py  get_festival.py
src/models/: __init__.py  als_model.py
src/recommandation_musique.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/static/: index.html
src/test/: test.ipynb
templates/: dashboard.html
