[project]
name = "festival-rag"
version = "0.1.0"
dependencies = [
    "jupyter",
    "beautifulsoup4",
    "boto3>=1.42.25",
    "python-dotenv>=1.2.1",
    "langchain>=1.2.3",
    "langchain-pinecone>=0.2.13",
    "pinecone>=7.3.0",
    "langchain-tools>=0.1.34",
    "langchain-ollama>=1.0.1",
    "langchain-google-genai>=4.1.3",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
